[project]
name = "VariantValidator"
dynamic = ["version"]
description = "API for accurate, mapping and formatting of sequence variants using HGVS nomenclature"
license = {file = "LICENSE.txt"}
authors = [{name = "VariantValidator Contributors", email = "admin@variantvalidator.org"}]
readme = "README.md"
keywords = ["bioinformatics",
        "computational biology",
        "genome variants",
        "genome variation",
        "genomic variants",
        "genomic variation",
        "genomics",
        "hgvs",
        "HGVS",
        "sequencevariants"
]

requires-python = ">=3.6"

dependencies = [
    "biocommons.seqrepo>=0.6.7",
    "httplib2>=0.22.0",
    "pyliftover>=0.4.1",
    "biotools>=0.3.0",
    "bioutils==0.5.8.post1",
    "mysql-connector-python==9.3.0",
    "requests==2.32.3",
    "biopython==1.85",
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.5.0",
    "codecov==2.1.13",
    "numpy==1.26.4",
    "configparser>=7.2.0",
    "protobuf==4.23.4",
    "lxml==4.9.3",
    "pysam",
    "vvhgvs@git+https://github.com/openvar/vv_hgvs@master",
    "VariantFormatter@git+https://github.com/openvar/variantFormatter@master"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: AGPL-3.0",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.urls]
"Homepage" = "https://variantvalidator.org/"
"Source" = "https://github.com/openvar/variantValidator"
"Bug Reports" = "https://github.com/openvar/variantValidator/issues"
"Say Thanks!" = "https://www.buymeacoffee.com/VariantValidatr"

[scripts]
update_vdb = "bin/update_vdb:main"
variant_validator = "bin/variant_validator:main"
vv_configure = "bin/vv_configure:main"
lovd_syntax_checker = "bin/lovd_syntax_checker.py"

data = [
    { include = "configuration", glob = "configuration/default.ini" },
]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]  # Look for packages in the 'root' directory
include = ["VariantValidator*"]  # Match package names starting with "VariantValidator"
exclude = ["batch"]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"
